# sqlcipher-cmake

./: CMakeLists.txt  README.md
cmake/: FindJNI.cmake
jdbc/: NativeDB.c  NativeDB.h  jni_module.c
jdbc/sqlite-jdbc-patcher/: SqliteJdbcPatcher.java  jni_module.in.c
